更新项目配置文件和新增banner.txt文件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 #配置端口
 server.port=8083
+#配置项目名称
+eims.name=Enterprise Information Management System
+eims.version=1.0.0
+eims.copyright=2019
 #配置热部署
 spring.devtools.restart.enabled=true
+spring.http.encoding.force=true
 #配置日志
 
 #配置数据库mysql+druid
@@ -72,7 +77,7 @@ mybatis.mapper-locations=classpath:mybatis/mapper/**/*.xml
 #配置Thymeleaf(关闭缓存确保可以实时看到页面)
 #(Ctrl+Shift+F9即可看到修改静态)
 spring.thymeleaf.cache=false
-spring.thymeleaf.mode=HTML5
+spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.suffix=.html
