--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,24 @@
     <artifactId>eims</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>eims</name>
-    <description>EIMS project for Spring Boot</description>
+    <packaging>jar</packaging>
+    <description>Enterprise Information Management System</description>
     <properties>
+        <!-- 集中管理依赖版本-->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <mysql.version>5.1.25</mysql.version>
+        <lombok.version>1.18.4</lombok.version>
+        <fastjson.version>1.2.47</fastjson.version>
+        <nekohtml.version>1.9.21</nekohtml.version>
+        <commons.lang3.version>3.6</commons.lang3.version>
+        <springfox-swagger2.version>2.6.1</springfox-swagger2.version>
+        <druid-spring-boot-starter.version>1.1.10</druid-spring-boot-starter.version>
+        <mybatis-spring-boot-starter.version>1.3.2</mybatis-spring-boot-starter.version>
+        <spring-boot-starter-thymeleaf.version>2.1.0.RELEASE</spring-boot-starter-thymeleaf.version>
+        <pagehelper.spring.boot.starter.version>1.2.3</pagehelper.spring.boot.starter.version>
+        <spring-boot-devtools.version>2.1.0.RELEASE</spring-boot-devtools.version>
     </properties>
     <dependencies>
         <!-- SpringBootWeb-->
@@ -32,37 +47,37 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.25</version>
+            <version>${mysql.version}</version>
         </dependency>
         <!-- Thymeleaf模板引擎-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
-            <version>2.1.0.RELEASE</version>
+            <version>${spring-boot-starter-thymeleaf.version}</version>
         </dependency>
         <!-- Lombok-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.4</version>
+            <version>${lombok.version}</version>
         </dependency>
         <!-- MyBatis-->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.3.2</version>
+            <version>${mybatis-spring-boot-starter.version}</version>
         </dependency>
         <!-- Druid数据库连接池-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.1.10</version>
+            <version>${druid-spring-boot-starter.version}</version>
         </dependency>
         <!-- devtools-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
-            <version>2.1.0.RELEASE</version>
+            <version>${spring-boot-devtools.version}</version>
             <optional>true</optional>
         </dependency>
         <!--配置这个可以使鼠标点击就可以到那个配置类的 -->
@@ -75,18 +90,36 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.47</version>
+            <version>${fastjson.version}</version>
+        </dependency>
+        <!-- Thymeleaf语法校验nekohtml-->
+        <dependency>
+            <groupId>net.sourceforge.nekohtml</groupId>
+            <artifactId>nekohtml</artifactId>
+            <version>${nekohtml.version}</version>
+        </dependency>
+        <!-- 分页插件-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>${pagehelper.spring.boot.starter.version}</version>
+        </dependency>
+        <!-- commons-lang3工具类-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons.lang3.version}</version>
         </dependency>
         <!--添加Swagger2 -->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
-            <version>2.6.1</version>
+            <version>${springfox-swagger2.version}</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.6.1</version>
+            <version>${springfox-swagger2.version}</version>
         </dependency>
     </dependencies>
     <build>
