添加项目的AdminServer监控,和邮件告警功能.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 #配置端口
 server.port=8083
+#配置项目名
+spring.application.name=Eims
+# 配置Admin Server的监控地址
+#配置监控地址
+spring.boot.admin.client.url=http://localhost:8081
 #配置项目名称
 eims.name=Enterprise Information Management System
 eims.version=1.0.0
@@ -81,3 +86,13 @@ spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.suffix=.html
+#配置mail
+# 配置Mail信息
+spring.mail.host=smtp.qq.com
+spring.mail.port=465
+spring.mail.username=2212640110@qq.com
+spring.mail.password=zjkgbqffeoafdide
+spring.mail.default-encoding=UTF-8
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.from.mail.addr=2212640110@qq.com
