--- a/eimsadminserver/pom.xml
+++ b/eimsadminserver/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.lx</groupId>
     <artifactId>eimsadminserver</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>adminserver</name>
+    <name>eimsadminserver</name>
     <description>Eims project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
