--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 #配置端口
-server.port=8080
+server.port=8082
 #配置项目名
 spring.application.name=Eims
 # 配置Admin Server的监控地址
 #配置监控地址
-spring.boot.admin.client.url=http://localhost:8081
+spring.boot.admin.client.url=http://localhost:8080
+endpoints.metrics.enabled=true
 #配置项目名称
 eims.name=Enterprise Information Management System
 eims.version=1.0.0
@@ -87,7 +88,6 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.suffix=.html
 #配置mail
-# 配置Mail信息
 spring.mail.host=smtp.qq.com
 spring.mail.port=465
 spring.mail.username=2212640110@qq.com
