更新项目功能.新增邮件告警功能.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8082
 #配置项目名
 spring.application.name=Eims
 # 配置Admin Server的监控地址
-#配置监控地址
 spring.boot.admin.client.url=http://localhost:8080
-endpoints.metrics.enabled=true
+# 配置actuator
+management.endpoints.web.exposure.include=*
 #配置项目名称
 eims.name=Enterprise Information Management System
 eims.version=1.0.0
