--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,53 +1,53 @@
-#配置端口
+# 配置端口
 server.port=8082
-#配置项目名
+# 配置项目名
 spring.application.name=Eims
 # 配置Admin Server的监控地址
-spring.boot.admin.client.url=http://localhost:8080
+# spring.boot.admin.client.url=http://localhost:8080
 # 配置actuator
 management.endpoints.web.exposure.include=*
-#配置项目名称
+# 配置项目名称
 eims.name=Enterprise Information Management System
 eims.version=1.0.0
 eims.copyright=2019
-#配置热部署
+# 配置热部署
 spring.devtools.restart.enabled=true
 spring.http.encoding.force=true
-#配置日志
+# 配置日志
 
-#配置数据库mysql+druid
+# 配置数据库mysql+druid
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.druid.username=root
 spring.datasource.druid.password=479602
 spring.datasource.druid.url=jdbc:mysql://localhost:3306/mytest?useUnicode=true&characterEncoding=utf-8
-#初始化大小,最小活跃数,最大活跃数
+# 初始化大小,最小活跃数,最大活跃数
 spring.datasource.druid.initialSize=5
 spring.datasource.druid.minIdle=5
 spring.datasource.druid.maxActive=20
-#配置获取连接等待超时的时间
+# 配置获取连接等待超时的时间
 spring.datasource.druid.maxWait=60000
-#配置间隔多久才进行一次检测,检测需要关闭的空闲连接，单位是毫秒
+# 配置间隔多久才进行一次检测,检测需要关闭的空闲连接，单位是毫秒
 spring.datasource.druid.timeBetweenEvictionRunsMillis=60000
-#配置一个连接在池中最小生存的时间,单位是毫秒
+# 配置一个连接在池中最小生存的时间,单位是毫秒
 spring.datasource.druid.minEvictableIdleTimeMillis=300000
 spring.datasource.druid.validationQuery=SELECT 1 FROM DUAL
 spring.datasource.druid.testWhileIdle=true
 spring.datasource.druid.testOnBorrow=false
 spring.datasource.druid.testOnReturn=false
-#打开PSCache,并且指定每个连接上PSCache的大小
+# 打开PSCache,并且指定每个连接上PSCache的大小
 spring.datasource.druid.poolPreparedStatements=true
 spring.datasource.druid.maxPoolPreparedStatementPerConnectionSize=20
-#配置监控统计拦截的filters,去掉后监控界面sql无法统计，'wall'用于防火墙,依赖slf4j就配置slf4j
+# 配置监控统计拦截的filters,去掉后监控界面sql无法统计，'wall'用于防火墙,依赖slf4j就配置slf4j
 spring.datasource.druid.filters=stat,wall,slf4j
 ## WebStatFilter配置，说明请参考Druid Wiki，配置_配置WebStatFilter
-#是否启用StatFilter默认值true
+# 是否启用StatFilter默认值true
 spring.datasource.druid.web-stat-filter.enabled=true
 spring.datasource.druid.web-stat-filter.url-pattern=/*
 spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*
-#通过connectProperties属性来打开mergeSql功能;慢SQL记录
+# 通过connectProperties属性来打开mergeSql功能;慢SQL记录
 spring.datasource.druid.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-#置profileEnable能够监控单个url调用的sql列表。
+# 置profileEnable能够监控单个url调用的sql列表。
 spring.datasource.druid.web-stat-filter.profile-enable=true
 ## StatViewServlet配置，说明请参考Druid Wiki，配置_StatViewServlet配置
 spring.datasource.druid.stat-view-servlet.enabled= true
@@ -57,37 +57,37 @@ spring.datasource.druid.stat-view-servlet.login-username=admin
 spring.datasource.druid.stat-view-servlet.login-password=111111
 spring.datasource.druid.stat-view-servlet.allow=127.0.0.1
 spring.datasource.druid.stat-view-servlet.deny=192.168.10.1
-#配置wall filter
+# 配置wall filter
 spring.datasource.druid.filter.wall.enabled=true
 spring.datasource.druid.filter.wall.db-type=mysql
 spring.datasource.druid.filter.wall.config.alter-table-allow=false
 spring.datasource.druid.filter.wall.config.truncate-allow=false
 spring.datasource.druid.filter.wall.config.drop-table-allow=false
-#是否允许非以上基本语句的其他语句，缺省关闭，通过这个选项就能够屏蔽DDL。
+# 是否允许非以上基本语句的其他语句，缺省关闭，通过这个选项就能够屏蔽DDL。
 spring.datasource.druid.filter.wall.config.none-base-statement-allow=false
-#检查UPDATE语句是否无where条件，这是有风险的，但不是SQL注入类型的风险
+# 检查UPDATE语句是否无where条件，这是有风险的，但不是SQL注入类型的风险
 spring.datasource.druid.filter.wall.config.update-where-none-check=true
-#SELECT ... INTO OUTFILE 是否允许，这个是mysql注入攻击的常见手段，缺省是禁止的
+# SELECT ... INTO OUTFILE 是否允许，这个是mysql注入攻击的常见手段，缺省是禁止的
 spring.datasource.druid.filter.wall.config.select-into-outfile-allow=false
-#是否允许调用Connection.getMetadata方法，这个方法调用会暴露数据库的表信息
+# 是否允许调用Connection.getMetadata方法，这个方法调用会暴露数据库的表信息
 spring.datasource.druid.filter.wall.config.metadata-allow=true
-#对被认为是攻击的SQL进行LOG.error输出
+# 对被认为是攻击的SQL进行LOG.error输出
 spring.datasource.druid.filter.wall.log-violation=true
-#对被认为是攻击的SQL抛出SQLExcepton
+# 对被认为是攻击的SQL抛出SQLExcepton
 spring.datasource.druid.filter.wall.throw-exception=true
-#合并多个DruidDataSource的监控数据
+# 合并多个DruidDataSource的监控数据
 spring.datasource.druid.useGlobalDataSourceStat=true
-#配置MyBatis
+# 配置MyBatis
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
 mybatis.mapper-locations=classpath:mybatis/mapper/**/*.xml
-#配置Thymeleaf(关闭缓存确保可以实时看到页面)
+# 配置Thymeleaf(关闭缓存确保可以实时看到页面)
 #(Ctrl+Shift+F9即可看到修改静态)
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.suffix=.html
-#配置mail
+# 配置mail
 spring.mail.host=smtp.qq.com
 spring.mail.port=465
 spring.mail.username=2212640110@qq.com
