新增系统登录,验证码,记住我,退出,错误页面,首页,接入美洽客服(引入文件方式).
Signed-off-by: LiXing <2212640110@qq.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.druid.username=root
 spring.datasource.druid.password=479602
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/mytest?useUnicode=true&characterEncoding=utf-8
+spring.datasource.druid.url=jdbc:mysql://localhost:3306/eims?useUnicode=true&characterEncoding=utf-8
 # 初始化大小,最小活跃数,最大活跃数
 spring.datasource.druid.initialSize=5
 spring.datasource.druid.minIdle=5
