新增系统登录,验证码,记住我,退出,错误页面,首页,接入美洽客服(引入文件方式).
Signed-off-by: LiXing <2212640110@qq.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -79,6 +79,7 @@ spring.datasource.druid.filter.wall.throw-exception=true
 spring.datasource.druid.useGlobalDataSourceStat=true
 # 配置MyBatis-Plus
 mybatis-plus.mapper-locations=classpath:mybatis/mapper/**/*.xml
+# 实体类别名配置
 mybatis-plus.type-aliases-package=com.lx.eims.entity
 mybatis-plus.configuration.map-underscore-to-camel-case=true
 mybatis-plus.global-config.db-config.id-type=auto
@@ -111,6 +112,6 @@ spring.from.mail.addr=2212640110@qq.com
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 spring.servlet.multipart.enabled=true
-# json
+# 全局时间格式化(兼容JAVA8)
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
