--- a/pom.xml
+++ b/pom.xml
@@ -224,6 +224,24 @@
             <artifactId>poi</artifactId>
             <version>3.14</version>
         </dependency>
+        <!--HTML的解析器 -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.7.2</version>
+        </dependency>
+        <!-- Xwork-core -->
+        <dependency>
+            <groupId>org.apache.struts.xwork</groupId>
+            <artifactId>xwork-core</artifactId>
+            <version>2.3.15.1</version>
+        </dependency>
+        <!--Json解析的jar-->
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-json-plugin</artifactId>
+            <version>2.2.3</version>
+        </dependency>
         <!--<dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
