--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -100,14 +100,14 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.suffix=.html
 # 配置mail
-spring.mail.host=smtp.qq.com
-spring.mail.port=465
-spring.mail.username=2212640110@qq.com
-spring.mail.password=zjkgbqffeoafdide
-spring.mail.default-encoding=UTF-8
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.ssl.enable=true
-spring.from.mail.addr=2212640110@qq.com
+#spring.mail.host=smtp.qq.com
+#spring.mail.port=465
+#spring.mail.username=2212640110@qq.com
+#spring.mail.password=zjkgbqffeoafdide
+#spring.mail.default-encoding=UTF-8
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.ssl.enable=true
+#spring.from.mail.addr=2212640110@qq.com
 # 文件上传
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
