--- a/pom.xml
+++ b/pom.xml
@@ -242,11 +242,16 @@
             <artifactId>struts2-json-plugin</artifactId>
             <version>2.2.3</version>
         </dependency>
-        <!--<dependency>
+        <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
-            <version>3.17</version>
-        </dependency>-->
+            <version>3.14</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-scratchpad</artifactId>
+            <version>3.14</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
