--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -115,3 +115,6 @@ spring.servlet.multipart.enabled=true
 # 全局时间格式化(兼容JAVA8)
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
+# PageOffice的
+posyspath=d:/lic/
+popassword=111111
